# Arducam_tof_camera

./: .gitignore  CMakeLists.txt  Install_dependencies.sh  compile.sh
depth_streamer/: README.md
depth_streamer/backend/: =1.6.0  requirements.txt  run.sh
depth_streamer/backend/app/: __init__.py  config.py  logging.py  main.py
depth_streamer/backend/app/camera/: arducam_depth_camera.py  frame_processing.py  interfaces.py
depth_streamer/backend/app/control/: handlers.py  messages.py
depth_streamer/backend/app/utils/: fps_counter.py
depth_streamer/backend/app/webrtc/: datachannel.py  peer_manager.py  signaling_ws.py  video_track.py
depth_streamer/frontend/: index.html  package-lock.json  package.json  vite.config.ts
depth_streamer/frontend/src/: index.css  main.tsx
depth_streamer/frontend/src/components/: ControlsPanel.tsx  DepthInfoPanel.tsx  StatusBar.tsx  VideoPane.tsx
depth_streamer/frontend/src/core/: protocol.ts  signaling_client.ts  webrtc_client.ts
depth_streamer/frontend/src/pages/: Dashboard.tsx  TestPage.tsx
depth_streamer/frontend/src/services/: CameraApiService.ts
example/c/: preview_depth_stream.cpp
example/cpp/: CMakeLists.txt  preview_depth_stream.cpp
example/python/: stream_depth_mjpeg.py
